--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -1,7 +1,19 @@
-<ol>
-    {% for item in item_list %}
-    <a href="{% url 'myapp:detail' item.id %}">
-        <li>{{item.item_name}} -- {{item.item_description}} -- {{item.item_price}}</li>
-    </a>
-    {% endfor %}
-</ol>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'myapp/style.css' %}">
+    <title>Document</title>
+</head>
+<body>
+    <ol>
+        {% for item in item_list %}
+        <a href="{% url 'myapp:detail' item.id %}">
+            <li>{{item.item_name}} -- {{item.item_description}} -- {{item.item_price}}</li>
+        </a>
+        {% endfor %}
+    </ol>
+</body>
+</html>
