--- a/mysite/myapp/templates/myapp/detail.html
+++ b/mysite/myapp/templates/myapp/detail.html
@@ -1,5 +1,8 @@
-{{item.item_name}}
-<br>
-{{item.item_description}}
-<br>
-{{item.item_price}}
+{% extends 'myapp/base.html'%}
+{% block body %}
+    {{item.item_name}}
+    <br>
+    {{item.item_description}}
+    <br>
+    {{item.item_price}}
+{% endblock %}
