--- a/mysite/myapp/templates/myapp/detail.html
+++ b/mysite/myapp/templates/myapp/detail.html
@@ -1,8 +1,17 @@
 {% extends 'myapp/base.html'%}
 {% block body %}
-    {{item.item_name}}
-    <br>
-    {{item.item_description}}
-    <br>
-    {{item.item_price}}
+    <div class="m-10 flex">
+        <div>
+            <img class="w-128 rounded-lg" src="{{item.item_image}}" alt="">
+        </div>
+        <div class="mx-16 space-y-3">
+            <div class="font-bold text-4xl">{{item.item_name}}</div>
+            <div class="text-green-700 text-2xl font-bold">${{item.item_price}}</div>
+            <div>{{item.item_description}}</div>
+            <div>
+                <a class="bg-yellow-200 px-4 py-2 font-bold rounded-md" href="">Edit</a>
+                <a class="bg-red-500 px-4 py-2 font-bold rounded-md">Delete</a>
+            </div>
+        </div>
+    </div>
 {% endblock %}
