--- a/mysite/myapp/templates/myapp/item-form.html
+++ b/mysite/myapp/templates/myapp/item-form.html
@@ -1,5 +1,8 @@
-<form method="POST">
-    {%csrf_token%}
-    {{form}}
-    <button type="submit">Submit</button>
-</form>
+{% extends 'myapp/base.html'%}
+{% block body %}
+    <form method="POST">
+        {%csrf_token%}
+        {{form}}
+        <button type="submit">Submit</button>
+    </form>
+{% endblock %}
