--- a/mysite/myapp/templates/myapp/detail.html
+++ b/mysite/myapp/templates/myapp/detail.html
@@ -9,8 +9,8 @@
             <div class="text-green-700 text-2xl font-bold">${{item.item_price}}</div>
             <div>{{item.item_description}}</div>
             <div>
-                <a class="bg-yellow-200 px-4 py-2 font-bold rounded-md" href="">Edit</a>
-                <a class="bg-red-500 px-4 py-2 font-bold rounded-md">Delete</a>
+                <a class="bg-yellow-200 px-4 py-2 font-bold rounded-md" href="{% url 'myapp:update_item' item.id %}">Edit</a>
+                <a class="bg-red-500 px-4 py-2 font-bold rounded-md" href="{% url 'myapp:delete_item' item.id %}">Delete</a>
             </div>
         </div>
     </div>
