--- a/mysite/myapp/templates/myapp/base.html
+++ b/mysite/myapp/templates/myapp/base.html
@@ -17,6 +17,13 @@
             </div>
         </div>
     </nav>
+    {% if messages %}
+        {% for message in messages %}
+        <div class="bg-green-300 text-green-700">
+            {{message}}
+        </div>
+        {% endfor %}
+    {% endif %}
     {% block body %}
     {% endblock %}
 </body>
