--- a/mysite/myapp/templates/myapp/base.html
+++ b/mysite/myapp/templates/myapp/base.html
@@ -11,9 +11,12 @@
         <div class="flex justify-between px-4 py-4">
             <a href="" class="font-bold text-2xl">FoodApp</a>
             <div class="space-x-6 py-1">
-                <a href="">Contact</a>
-                <a href="">AboutUs</a>
-                <a href="">Address</a>
+                <a href="">{{user.username}}</a>
+                {% if user.is_authenticated %}
+                    <a href="{% url 'users:logout' %}">Logout</a>
+                {% else %}
+                    <a href="{% url 'users:login' %}">Login</a>
+                {% endif %}
             </div>
         </div>
     </nav>
