--- a/mysite/myapp/templates/myapp/base.html
+++ b/mysite/myapp/templates/myapp/base.html
@@ -11,7 +11,7 @@
         <div class="flex justify-between px-4 py-4">
             <a href="" class="font-bold text-2xl">FoodApp</a>
             <div class="space-x-6 py-1">
-                <a href="">{{user.username}}</a>
+                <a href="{% url 'users:profile' %}">{{user.username}}</a>
                 {% if user.is_authenticated %}
                     <a href="{% url 'users:logout' %}">Logout</a>
                 {% else %}
