--- a/mysite/myapp/templates/myapp/base.html
+++ b/mysite/myapp/templates/myapp/base.html
@@ -13,9 +13,8 @@
             <div class="space-x-6 py-1">
                 <a href="{% url 'users:profile' %}">{{user.username}}</a>
                 {% if user.is_authenticated %}
+                    <a href="{% url 'myapp:create_item' %}">AddItem</a>
                     <a href="{% url 'users:logout' %}">Logout</a>
-                {% else %}
-                    <a href="{% url 'users:login' %}">Login</a>
                 {% endif %}
             </div>
         </div>
