--- a/mysite/myapp/templates/myapp/item-form.html
+++ b/mysite/myapp/templates/myapp/item-form.html
@@ -1,8 +1,19 @@
+
 {% extends 'myapp/base.html'%}
 {% block body %}
-    <form method="POST">
-        {%csrf_token%}
-        {{form}}
-        <button type="submit">Submit</button>
-    </form>
+    <div class="flex flex-col justify-center items-center min-h-screen p-10">
+        <h1>Register</h1>
+        <form method="POST" class="shadow-lg p-10 space-y-5 rounded-lg w-100">
+            {% csrf_token %}
+            {% for field in form %}
+                <div>
+                    <label for="">{{field.label}}</label>
+                    <div class="border rounded p-1">
+                        {{field}}
+                    </div>
+                </div>
+            {% endfor %}
+            <button type="submit" class="bg-yellow-200 rounded-lg px-4 py-2 w-full">Add Item</button>
+        </form>
+    </div>
 {% endblock %}
