--- a/mysite/users/templates/users/login.html
+++ b/mysite/users/templates/users/login.html
@@ -1,5 +1,29 @@
-<form method="POST">
-    {% csrf_token %}
-    {{form}}
-    <button type="submit">LogIn</button>
-</form>
+{% extends 'myapp/base.html'%}
+{% block body %}
+    <div class="flex flex-col justify-center items-center min-h-screen p-10">
+        <h1>Login</h1>
+        <form method="POST" class="shadow-lg p-10 space-y-5 rounded-lg w-100">
+            {% csrf_token %}
+            {% if form.non_field_errors %}
+            <div class="text-red-700">
+                {% for error in form.non_field_errors %}
+                    <p>{{error}}</p>
+                {% endfor %}
+            </div>
+            {% endif %}
+            {% for field in form %}
+                <div>
+                    <label for="">{{field.label}}</label>
+                    <div class="border rounded p-1">
+                        {{field}}
+                    </div>
+                </div>
+            {% endfor %}
+            <p class="text-center">
+                New User? 
+                <a href="{% url 'users:register' %}" class="text-yellow-300">Register</a>
+            </p>  
+            <button type="submit" class="bg-yellow-200 rounded-lg px-4 py-2 w-full">Login</button>
+        </form>
+    </div>
+{% endblock %}
