--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -1,6 +1,8 @@
 {% extends 'myapp/base.html'%}
 {% block body %}
+{% load cache %}
     <div>
+        {% cache 900 page_obj %}
         {% for item in page_obj %}
         <div class="m-10 flex w-1/2 mx-auto">
             <div>
@@ -22,5 +24,15 @@
             </div>
         </div>
         {% endfor %}
+        {% endcache %}
+    </div>
+    <div class="flex items-center justify-center space-x-4 pb-4">
+        {% if page_obj.has_previous %}
+        <a href="?page={{page_obj.previous_page_number}}" class="bg-yellow-200 font-bold text-l px-4 py-2 rounded-2xl hover:bg-yellow-300">Prev</a>
+        {% endif %}
+        <span>Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}</span>
+        {% if page_obj.has_next %}
+        <a href="?page={{page_obj.next_page_number}}" class="bg-yellow-200 font-bold text-l px-4 py-2 rounded-2xl hover:bg-yellow-300">Next</a>
+        {% endif %}
     </div>  
 {% endblock %}
