--- a/mysite/myapp/templates/myapp/item-form.html
+++ b/mysite/myapp/templates/myapp/item-form.html
@@ -2,7 +2,8 @@
 {% extends 'myapp/base.html'%}
 {% block body %}
     <div class="flex flex-col justify-center items-center min-h-screen p-10">
-        <h1>Register</h1>
+        <h1>Add Item</h1>
+        {{form.errors}}
         <form method="POST" class="shadow-lg p-10 space-y-5 rounded-lg w-100">
             {% csrf_token %}
             {% for field in form %}
